# TTT

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  paginator.py  permissions.py  serialaizers.py  servives.py  stripe.py  tasks.py  urls.py  validators.py  views.py
main/migrations/: 0001_initial.py
users/: models.py  tasks.py
users/management/commands/: csu.py  t.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_country_and_more.py
